testdata/cases/analyze/nil_map_assignment.go
package analyze_cases

func nilMapAssignment() {
	var values map[string]int
	values["answer"] = 42
}
